完成無障礙 2.0 A 級檢測

--- a/language/tchinese/changelog.txt
+++ b/language/tchinese/changelog.txt
@@ -1,3 +1,8 @@
+tad_tv 1.2 (2017-06-16 釋出)
+=================================================
+1.完成無障礙 2.0 A 級檢測
+
+
 tad_tv 1.1 (2017-01-15 釋出)
 =================================================
 1.修正後台編輯分類表單語系不正常的問題
