--- a/language/tchinese/changelog.txt
+++ b/language/tchinese/changelog.txt
@@ -1,3 +1,8 @@
+tad_tv 1.2.1 (2017-09-27 釋出)
+=================================================
+1.移除區塊
+
+
 tad_tv 1.2 (2017-06-16 釋出)
 =================================================
 1.完成無障礙 2.0 A 級檢測
