--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+tad_tv 1.3 (2019-01-01 釋出)
+=================================================
+1.支援 BootStrap4
+2.支援 PHP 7.1
+
+
 tad_tv 1.2.1 (2017-09-27 釋出)
 =================================================
 1.移除區塊
