支援 MySQL 資料庫嚴格模式

--- a/README
+++ b/README
@@ -1,7 +1,8 @@
 tad_tv 1.3 (2019-01-01 釋出)
 =================================================
 1.支援 BootStrap4
-2.支援 PHP 7.1
+2.支援 PHP 7.3
+3.支援 MySQL 資料庫嚴格模式
 
 
 tad_tv 1.2.1 (2017-09-27 釋出)
