--- a/language/english/changelog.txt
+++ b/language/english/changelog.txt
@@ -1,3 +1,8 @@
+Tad_tv 1.4 (released from 2019-05-10)
+=========================================================
+1. Support XOOPS 2.5.10
+2. No longer supports PHP 5.3
+
 Tad_tv 1.3 (released from 2019-01-01)
 ==========================================================
 1. Support BootStrap4
