--- a/README
+++ b/README
@@ -1,7 +1,11 @@
+tad_tv 1.5 (尚未釋出)
+================================================
+1.針對無障礙 2.0 AA標準進行修正
+
 tad_tv 1.4 (2019-05-10 釋出)
 ================================================
 1.支援 XOOPS 2.5.10
-2.不再支援 PHP 5.3 
+2.不再支援 PHP 5.3
 
 tad_tv 1.3 (2019-01-01 釋出)
 =================================================
